--- a/web/src/components/SlidingPane/SlidingPane.css
+++ b/web/src/components/SlidingPane/SlidingPane.css
@@ -97,8 +97,18 @@
   overflow-y: auto;
   padding: 24px 32px;
   flex: 1 1 auto;
+
+  background: linear-gradient(
+      rgba(207, 243, 166, 0.45),
+      rgba(204, 240, 180, 0.45)
+    ),
+    url(../../assets/images/groceryAisle.jpg);
 }
 .slide-pane__subtitle {
   font-size: 12px;
   margin-top: 2px;
 }
+
+/* .sliding-pane__background {
+  background: url(../../assets/images/groceryAisle.jpg);
+} */
