--- a/web/src/components/ShoppingCart/ShoppingCart.module.css
+++ b/web/src/components/ShoppingCart/ShoppingCart.module.css
@@ -1,3 +1,13 @@
 .sliding_pane_background {
   background: url(../../assets/images/groceryAisle.jpg);
 }
+
+.cards {
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.4rem;
+}
+
+.itemsDisplay {
+  max-height: 30rem;
+  overflow-y: scroll;
+}
