--- a/web/src/styles/Login.module.css
+++ b/web/src/styles/Login.module.css
@@ -30,6 +30,7 @@ label {
 
 @media only screen and (max-width: 600px) {
   .login {
-    max-width: 80%;
+    max-width: 100%;
+    width: 85%;
   }
 }
