--- a/web/src/components/ShoppingCart/CartItem.module.css
+++ b/web/src/components/ShoppingCart/CartItem.module.css
@@ -18,3 +18,27 @@ input.edit {
 .itemInfo {
   font-size: 1.5rem;
 }
+
+.layout {
+  display: grid;
+  /* grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); */
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-areas:
+    'image amount unit'
+    'name aisle';
+  grid-gap: 1rem;
+
+}
+
+
+@media only screen and (max-width: 600px) {
+  .displayImage {
+    width: 2.5rem;
+    border-radius: 5rem;
+  }
+
+  .itemInfo {
+    font-size: 1rem;
+  }
+
+}
