--- a/web/src/components/ShoppingCart/CartItem.module.css
+++ b/web/src/components/ShoppingCart/CartItem.module.css
@@ -11,8 +11,9 @@ input.edit {
 }
 
 .displayImage {
-  width: 3.5rem;
-  border-radius: 5rem;
+  width: 4rem;
+  max-height: 5rem;
+  /* border-radius: 5rem; */
 }
 
 .itemInfo {
@@ -41,10 +42,10 @@ input.edit {
 
 
 @media only screen and (max-width: 600px) {
-  .displayImage {
-    width: 2.5rem;
-    border-radius: 5rem;
-  }
+  /* .displayImage {
+    width: 4rem;
+    max-height: 5rem;
+  } */
 
   .itemInfo {
     font-size: 1rem;
