--- a/web/src/components/ShoppingCart/CartItem.module.css
+++ b/web/src/components/ShoppingCart/CartItem.module.css
@@ -26,6 +26,7 @@ input.edit {
   /* grid-template-columns: repeat(auto-fit, minmax(320px, 1fr)); */
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
+  grid-gap: 1rem;
   /* grid-template-areas:
     'image amount unit'
     'name aisle';
