--- a/web/src/styles/Home.module.css
+++ b/web/src/styles/Home.module.css
@@ -4,22 +4,13 @@
 
 .heroImg {
   width: 100vw;
-  /* max-height: 100vh; */
+  height: 100vh;
+  object-fit: cover;
 }
 
 a:hover {
   text-decoration: none;
 }
-
-/* .signUpBtn {
-  width: 5rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: block;
-  margin: auto;
-  top: 30%;
-  left: 30%;
-} */
 
 .benefits {
   display: grid;
@@ -32,3 +23,11 @@ a:hover {
   width: 100%;
   max-height: 470px;
 }
+
+/* @media only screen and (max-width: 600px) {
+  .heroImg {
+    width: auto;
+    height: 100%;
+  }
+} */
+
