--- a/web/src/components/ShoppingCart/CartItem.module.css
+++ b/web/src/components/ShoppingCart/CartItem.module.css
@@ -13,7 +13,7 @@ input.edit {
 .displayImage {
   width: 4rem;
   max-height: 5rem;
-  /* border-radius: 5rem; */
+  cursor: pointer;
 }
 
 .itemInfo {
